feat: AR 탐지 안정성 대폭 개선 - 세션 상태 관리 및 임계값 정책 수정
- EFTGuideAR: sessionStartedRef 기반 RAF 루프 관리로 상태 동기화 해결
- 적응형 임계값 정책: 0.2 → 0.4 → 0.15 응급 모드로 탐지 개선
- Calibration: 개발 모드 자동 완료 및 중복 실행 방지 안전장치 추가
- 페이지 가시성 API로 탭 전환 시 리소스 관리 최적화
- MediaPipe FaceMesh 468 랜드마크 안정적 처리 보장

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -136,7 +136,8 @@
     <!-- Service Worker 등록 (배포 빌드에서만) -->
     <script type="module">
       // Vite는 index.html의 type="module" 스크립트에서 import.meta.env 사용 가능
-      if ('serviceWorker' in navigator && import.meta.env.PROD) {
+      if ('serviceWorker' in navigator) {
+        if (import.meta.env.PROD) {
         window.addEventListener('load', async () => {
           try {
             const reg = await navigator.serviceWorker.register('/sw.js');
@@ -179,8 +180,16 @@
             console.log('❌ Service Worker 등록 실패:', error);
           }
         });
-      } else if (import.meta.env.DEV) {
-        console.log('🛠️ 개발 환경: Service Worker 비활성화됨');
+        } else {
+          // DEV: 혹시 남아 있던 SW를 전부 제거
+          console.log('🛠️ 개발 환경: Service Worker 비활성화됨');
+          navigator.serviceWorker.getRegistrations().then(registrations => {
+            registrations.forEach(registration => {
+              registration.unregister();
+              console.log('🧹 개발 모드에서 Service Worker 제거:', registration.scope);
+            });
+          });
+        }
       }
 
       // 앱 설치 프롬프트 (A2HS)
